// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fillDetails component should render V2 fill 1`] = `
<DocumentFragment>
  <dl
    class="fill-details__FillDetailList-sc-5nb7jb-0 ARBAf"
  >
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Date:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      Thursday, October 10th 2019, 6:13:48 AM GMT-03:00
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Transaction Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-details__FillDetailLink-sc-5nb7jb-1 jdKtAI"
        href="/search?q=0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
      >
        0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77
      </a>
      <a
        class="link__StyledLink-sc-1m1n17q-0 link___StyledStyledLink-sc-1m1n17q-1 jcGDtB fill-details___StyledLink-sc-5nb7jb-2 eZwqmM"
        href="https://etherscan.io/tx/0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          height="16"
          src="https://resources.0xtracker.com/logos/etherscan.png"
          width="16"
        />
      </a>
      <button
        class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-details___StyledCopyToClipboardButton-sc-5nb7jb-3 fTqJIu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon-base__IconBase-ngmsqy-0 hvjdWy"
          fill="currentColor"
          focusable="false"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
          />
        </svg>
      </button>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Order Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-details__FillDetailLink-sc-5nb7jb-1 jdKtAI"
        href="/search?q=0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71"
      >
        0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71
      </a>
      <button
        class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-details___StyledCopyToClipboardButton2-sc-5nb7jb-4 Tudko"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon-base__IconBase-ngmsqy-0 hvjdWy"
          fill="currentColor"
          focusable="false"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
          />
        </svg>
      </button>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Value (USD):
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <span>
        $184.29
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Protocol Version:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      v2
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Protocol Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Associated Apps:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Traded Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <div>
        <div
          class="fill-assets-list___StyledDiv-sc-2koyyn-0 fYDNTK"
        >
          <svg
            _css3="hsl(46, 90%, 50%)"
            aria-hidden="true"
            class="icon-base__IconBase-ngmsqy-0 hvjdWy token-image___StyledTokenIcon-sc-10if1f8-1 hIbyeI fill-assets-list___StyledTokenImage-sc-2koyyn-1 fPEMJH"
            fill="currentColor"
            focusable="false"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
            />
          </svg>
          <span>
            0.96955 
            <span>
              <a
                class="link__StyledLink-sc-1m1n17q-0 diqghp fill-assets-list___StyledAssetLabel-sc-2koyyn-2 hUboAL"
                href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
              >
                Wrapped Ether  (WETH)
              </a>
            </span>
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge-sc-2koyyn-3 dzmSpj"
          >
            Maker
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge2-sc-2koyyn-4 kUNfgv"
          >
            1 WETH = 
            <span>
              $190.08
            </span>
          </span>
          <a
            class="link__StyledLink-sc-1m1n17q-0 link___StyledStyledLink-sc-1m1n17q-1 jcGDtB fill-assets-list___StyledLink-sc-2koyyn-5 hWqaBI"
            href="https://etherscan.io/token/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            rel="noreferrer noopener"
            target="_blank"
          >
            <img
              height="16"
              src="https://resources.0xtracker.com/logos/etherscan.png"
              width="16"
            />
          </a>
          <button
            class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-assets-list___StyledCopyToClipboardButton-sc-2koyyn-6 hnzljv"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon-base__IconBase-ngmsqy-0 hvjdWy"
              fill="currentColor"
              focusable="false"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
              />
            </svg>
          </button>
        </div>
        <div
          class="fill-assets-list___StyledDiv-sc-2koyyn-0 fYDNTK"
        >
          <svg
            _css3="hsl(46, 90%, 50%)"
            aria-hidden="true"
            class="icon-base__IconBase-ngmsqy-0 hvjdWy token-image___StyledTokenIcon-sc-10if1f8-1 hIbyeI fill-assets-list___StyledTokenImage-sc-2koyyn-1 fPEMJH"
            fill="currentColor"
            focusable="false"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
            />
          </svg>
          <span>
            5,000 
            <span>
              <a
                class="link__StyledLink-sc-1m1n17q-0 diqghp fill-assets-list___StyledAssetLabel-sc-2koyyn-2 hUboAL"
                href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
              >
                FOAM Token  (FOAM)
              </a>
            </span>
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge-sc-2koyyn-3 dzmSpj"
          >
            Taker
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge2-sc-2koyyn-4 kUNfgv"
          >
            1 FOAM = 
            <span>
              $0.03686
            </span>
          </span>
          <a
            class="link__StyledLink-sc-1m1n17q-0 link___StyledStyledLink-sc-1m1n17q-1 jcGDtB fill-assets-list___StyledLink-sc-2koyyn-5 hWqaBI"
            href="https://etherscan.io/token/0x4946fcea7c692606e8908002e55a582af44ac121"
            rel="noreferrer noopener"
            target="_blank"
          >
            <img
              height="16"
              src="https://resources.0xtracker.com/logos/etherscan.png"
              width="16"
            />
          </a>
          <button
            class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-assets-list___StyledCopyToClipboardButton-sc-2koyyn-6 hnzljv"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon-base__IconBase-ngmsqy-0 hvjdWy"
              fill="currentColor"
              focusable="false"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
              />
            </svg>
          </button>
        </div>
      </div>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker Fees:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker Fees:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
  </dl>
</DocumentFragment>
`;

exports[`fillDetails component should render V3 fill 1`] = `
<DocumentFragment>
  <dl
    class="fill-details__FillDetailList-sc-5nb7jb-0 ARBAf"
  >
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Date:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      Thursday, October 10th 2019, 6:13:48 AM GMT-03:00
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Transaction Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-details__FillDetailLink-sc-5nb7jb-1 jdKtAI"
        href="/search?q=0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
      >
        0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77
      </a>
      <a
        class="link__StyledLink-sc-1m1n17q-0 link___StyledStyledLink-sc-1m1n17q-1 jcGDtB fill-details___StyledLink-sc-5nb7jb-2 eZwqmM"
        href="https://etherscan.io/tx/0x68e018d2c97cf76af6bae65297e6f5b6bc9680b95b828bdea5eb03a0b36ebc77"
        rel="noreferrer noopener"
        target="_blank"
      >
        <img
          height="16"
          src="https://resources.0xtracker.com/logos/etherscan.png"
          width="16"
        />
      </a>
      <button
        class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-details___StyledCopyToClipboardButton-sc-5nb7jb-3 fTqJIu"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon-base__IconBase-ngmsqy-0 hvjdWy"
          fill="currentColor"
          focusable="false"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
          />
        </svg>
      </button>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Order Hash:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <a
        class="link__StyledLink-sc-1m1n17q-0 diqghp fill-details__FillDetailLink-sc-5nb7jb-1 jdKtAI"
        href="/search?q=0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71"
      >
        0x8104d4c4a32da7f1df357779fe6b8fc11dc6f4287de54566fe22eb35a74b0c71
      </a>
      <button
        class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-details___StyledCopyToClipboardButton2-sc-5nb7jb-4 Tudko"
        type="button"
      >
        <svg
          aria-hidden="true"
          class="icon-base__IconBase-ngmsqy-0 hvjdWy"
          fill="currentColor"
          focusable="false"
          height="18"
          viewBox="0 0 24 24"
          width="18"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
          />
        </svg>
      </button>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Value (USD):
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <span>
        $184.29
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Protocol Version:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      v2
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Protocol Fee:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      0.0001 ETH
      <span
        class="badge__Badge-sc-8ieo9x-0 fill-details___StyledBadge-sc-5nb7jb-5 cowLWm"
      >
        <span>
          $0.20000
        </span>
      </span>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Associated Apps:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Traded Assets:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      <div>
        <div
          class="fill-assets-list___StyledDiv-sc-2koyyn-0 fYDNTK"
        >
          <svg
            _css3="hsl(46, 90%, 50%)"
            aria-hidden="true"
            class="icon-base__IconBase-ngmsqy-0 hvjdWy token-image___StyledTokenIcon-sc-10if1f8-1 hIbyeI fill-assets-list___StyledTokenImage-sc-2koyyn-1 fPEMJH"
            fill="currentColor"
            focusable="false"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
            />
          </svg>
          <span>
            0.96955 
            <span>
              <a
                class="link__StyledLink-sc-1m1n17q-0 diqghp fill-assets-list___StyledAssetLabel-sc-2koyyn-2 hUboAL"
                href="/tokens/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
              >
                Wrapped Ether  (WETH)
              </a>
            </span>
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge-sc-2koyyn-3 dzmSpj"
          >
            Maker
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge2-sc-2koyyn-4 kUNfgv"
          >
            1 WETH = 
            <span>
              $190.08
            </span>
          </span>
          <a
            class="link__StyledLink-sc-1m1n17q-0 link___StyledStyledLink-sc-1m1n17q-1 jcGDtB fill-assets-list___StyledLink-sc-2koyyn-5 hWqaBI"
            href="https://etherscan.io/token/0xc02aaa39b223fe8d0a0e5c4f27ead9083c756cc2"
            rel="noreferrer noopener"
            target="_blank"
          >
            <img
              height="16"
              src="https://resources.0xtracker.com/logos/etherscan.png"
              width="16"
            />
          </a>
          <button
            class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-assets-list___StyledCopyToClipboardButton-sc-2koyyn-6 hnzljv"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon-base__IconBase-ngmsqy-0 hvjdWy"
              fill="currentColor"
              focusable="false"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
              />
            </svg>
          </button>
        </div>
        <div
          class="fill-assets-list___StyledDiv-sc-2koyyn-0 fYDNTK"
        >
          <svg
            _css3="hsl(46, 90%, 50%)"
            aria-hidden="true"
            class="icon-base__IconBase-ngmsqy-0 hvjdWy token-image___StyledTokenIcon-sc-10if1f8-1 hIbyeI fill-assets-list___StyledTokenImage-sc-2koyyn-1 fPEMJH"
            fill="currentColor"
            focusable="false"
            height="20"
            viewBox="0 0 24 24"
            width="20"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M0 0h24v24H0z"
              fill="none"
            />
            <path
              d="M12 22C6.477 22 2 17.523 2 12S6.477 2 12 2s10 4.477 10 10-4.477 10-10 10zm0-14.243L7.757 12 12 16.243 16.243 12 12 7.757z"
            />
          </svg>
          <span>
            5,000 
            <span>
              <a
                class="link__StyledLink-sc-1m1n17q-0 diqghp fill-assets-list___StyledAssetLabel-sc-2koyyn-2 hUboAL"
                href="/tokens/0x4946fcea7c692606e8908002e55a582af44ac121"
              >
                FOAM Token  (FOAM)
              </a>
            </span>
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge-sc-2koyyn-3 dzmSpj"
          >
            Taker
          </span>
          <span
            class="badge__Badge-sc-8ieo9x-0 fill-assets-list___StyledBadge2-sc-2koyyn-4 kUNfgv"
          >
            1 FOAM = 
            <span>
              $0.03686
            </span>
          </span>
          <a
            class="link__StyledLink-sc-1m1n17q-0 link___StyledStyledLink-sc-1m1n17q-1 jcGDtB fill-assets-list___StyledLink-sc-2koyyn-5 hWqaBI"
            href="https://etherscan.io/token/0x4946fcea7c692606e8908002e55a582af44ac121"
            rel="noreferrer noopener"
            target="_blank"
          >
            <img
              height="16"
              src="https://resources.0xtracker.com/logos/etherscan.png"
              width="16"
            />
          </a>
          <button
            class="copy-to-clipboard-button__Button-ynucn3-0 hHNgQT fill-assets-list___StyledCopyToClipboardButton-sc-2koyyn-6 hnzljv"
            type="button"
          >
            <svg
              aria-hidden="true"
              class="icon-base__IconBase-ngmsqy-0 hvjdWy"
              fill="currentColor"
              focusable="false"
              height="18"
              viewBox="0 0 24 24"
              width="18"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M20 2H10c-1.103 0-2 .897-2 2v4H4c-1.103 0-2 .897-2 2v10c0 1.103.897 2 2 2h10c1.103 0 2-.897 2-2v-4h4c1.103 0 2-.897 2-2V4c0-1.103-.897-2-2-2zM4 20V10h10l.002 10H4zm16-6h-4v-4c0-1.103-.897-2-2-2h-4V4h10v10z"
              />
            </svg>
          </button>
        </div>
      </div>
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Maker Fees:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
    <dt
      class="fill-detail__Title-q3it9r-0 fiNRGs"
    >
      <svg
        aria-hidden="true"
        class="icon-base__IconBase-ngmsqy-0 hvjdWy fill-detail___StyledHelpWidget-q3it9r-2 dYSwqK"
        fill="currentColor"
        focusable="false"
        height="18"
        viewBox="0 0 24 24"
        width="18"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 6a3.939 3.939 0 00-3.934 3.934h2C10.066 8.867 10.934 8 12 8s1.934.867 1.934 1.934c0 .598-.481 1.032-1.216 1.626a9.208 9.208 0 00-.691.599c-.998.997-1.027 2.056-1.027 2.174V15h2l-.001-.633c.001-.016.033-.386.441-.793.15-.15.339-.3.535-.458.779-.631 1.958-1.584 1.958-3.182A3.937 3.937 0 0012 6zm-1 10h2v2h-2z"
        />
        <path
          d="M12 2C6.486 2 2 6.486 2 12s4.486 10 10 10 10-4.486 10-10S17.514 2 12 2zm0 18c-4.411 0-8-3.589-8-8s3.589-8 8-8 8 3.589 8 8-3.589 8-8 8z"
        />
      </svg>
      Taker Fees:
    </dt>
    <dd
      class="fill-detail__Value-q3it9r-1 eTpWrx"
    >
      None
    </dd>
  </dl>
</DocumentFragment>
`;
